--- a/src/css/tailwind/tailwind.css
+++ b/src/css/tailwind/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn {
+        @apply font-semibold text-white py-2 px-4 rounded
+    }
+}
