--- a/src/css/style.css
+++ b/src/css/style.css
@@ -533,6 +533,10 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.m-10 {
+  margin: 2.5rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -547,6 +551,10 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .bg-indigo-700 {
@@ -577,6 +585,10 @@ video {
 .bg-orange-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(194 65 12 / var(--tw-bg-opacity));
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .px-4 {
@@ -804,6 +816,11 @@ video {
   background-color: rgb(64 64 64 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .focus\:bg-pink-500:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(236 72 153 / var(--tw-bg-opacity));
@@ -816,4 +833,14 @@ video {
 
 .focus\:outline:focus {
   outline-style: solid;
+}
+
+.group:hover .group-hover\:text-blue-900 {
+  --tw-text-opacity: 1;
+  color: rgb(30 58 138 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-red-900 {
+  --tw-text-opacity: 1;
+  color: rgb(127 29 29 / var(--tw-text-opacity));
 }
